packages/typ/tests/fixtures/diagnostics/0202_adt_tuple_constructor_mismatch_07.ml.expected
File "0202_adt_tuple_constructor_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0202_adt_tuple_constructor_mismatch_07 is not a valid module name.

File "0202_adt_tuple_constructor_mismatch_07.ml", line 2, characters 28-32:
2 | let _ : rec_eta = Pair_eta (true, 6)
                                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
